# rucksack

./: .git-blame-ignore-revs  Cargo.toml  README.md  audit.toml  bacon.toml  deny.toml  dist-workspace.toml  flake.nix  justfile  release.toml
.cargo/: audit.toml
.github/: renovate.json
.github/workflows/: release.yml
src/: config.rs  logging.rs  main.rs  trace.rs  watch.rs
wix/: main.wxs
