[package]
name = "file-collector"
version = "0.3.0"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2021"
description = "CLI tool to collect files from multiple directories into a single target"
repository = "https://github.com/msfjarvis/file-collector"
homepage = "https://github.com/msfjarvis/file-collector"
license = "MIT/Apache-2.0"
keywords = []
readme = "README.md"
include = ["src/**/*", "LICENSE-*", "README.md"]
publish = false

[dependencies]
anyhow = "1.0.71"
basic-toml = "0.1.2"
dirs = "5.0.1"
futures = "0.3.28"
serde = "1.0.164"
serde_derive = "1.0.164"
tokio = { version = "1.28.2", features = ["tokio-macros"] }
tracing = "0.1.37"
tracing-journald = { version = "0.3.0", optional = true }
tracing-subscriber = "0.3.17"
watchman_client = "0.8.0"

[dev-dependencies]
assay = "0.1.1"

[features]
journald = ["tracing-journald"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-pc-windows-msvc", "x86_64-apple-darwin"]
