[package]
name = "rucksack"
version = "1.1.0"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2021"
description = "CLI tool to collect files from multiple directories into a single target"
repository = "https://github.com/msfjarvis/rucksack"
homepage = "https://github.com/msfjarvis/rucksack"
license = "MIT/Apache-2.0"
keywords = []
readme = "README.md"
include = ["src/**/*", "LICENSE-*", "README.md"]
publish = false

[dependencies]
anyhow = "1.0.82"
basic-toml = "0.1.9"
dirs = "5.0.1"
futures = "0.3.30"
globset = "0.4.14"
serde = "1.0.198"
serde_derive = "1.0.198"
tokio = { version = "1.37.0", features = ["tokio-macros"] }
tracing = "0.1.40"
tracing-journald = { version = "0.3.0", optional = true }
tracing-subscriber = "0.3.18"
watchman_client = "0.8.0"

[dev-dependencies]
assay = "0.1.1"

[features]
journald = ["tracing-journald"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "msfjarvis/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to consider the binaries in a package for distribution (defaults true)
dist = true
# Publish jobs to run in CI
pr-run-mode = "upload"
