[package]
name = "rucksack"
version = "1.2.1"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2021"
description = "CLI tool to collect files from multiple directories into a single target"
repository = "https://github.com/msfjarvis/rucksack"
homepage = "https://github.com/msfjarvis/rucksack"
license = "MIT/Apache-2.0"
keywords = []
readme = "README.md"
include = ["src/**/*", "LICENSE-*", "README.md"]
publish = false

[dependencies]
anyhow = "1.0.82"
basic-toml = "0.1.9"
dirs = "5.0.1"
futures = "0.3.30"
globset = "0.4.14"
serde = "1.0.200"
serde_derive = "1.0.200"
tokio = { version = "1.37.0", features = ["tokio-macros"] }
tracing = "0.1.40"
tracing-journald = { version = "0.3.0", optional = true }
tracing-subscriber = "0.3.18"
watchman_client = "0.9.0"

[dev-dependencies]
assay = "0.1.1"

[features]
journald = ["tracing-journald"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
